tests/rosetta/out/Fortran/attractive-numbers.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program attractive_numbers
  implicit none
    integer :: d
    integer :: count
    integer :: f
    integer :: s
    character(len=100) :: s0
    integer :: max
    character(len=100) :: s1
    character(len=100) :: line
    integer :: lineCount
    integer :: i
      integer :: c
  main()
  contains
  recursive logical function isPrime(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = .false.
      return
    end if
    if ((mod(n,2) == 0)) then
      res = (n == 2)
      return
    end if
    if ((mod(n,3) == 0)) then
      res = (n == 3)
      return
    end if
    d = 5
    do while (((d * d) <= n))
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 2)
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 4)
    end do
    res = .true.
    return
  end function isPrime
  recursive integer function countPrimeFactors(n) result(res)
    integer, intent(in) :: n
    if ((n == 1)) then
      res = 0
      return
    end if
    if (isPrime(n)) then
      res = 1
      return
    end if
    count = 0
    f = 2
    do while (.true.)
      if ((mod(n,f) == 0)) then
        count = (count + 1)
        n = (n / f)
        if ((n == 1)) then
          res = count
          return
        end if
        if (isPrime(n)) then
          f = n
        end if
      else if ((f >= 3)) then
        f = (f + 2)
      else
        f = 3
      end if
    end do
    res = count
    return
  end function countPrimeFactors
  recursive character(len=100) function pad4(n) result(res)
    integer, intent(in) :: n
    write(s0,'(G0)') n
    s = s0
    do while ((size(s) < 4))
      s = ' ' // s
    end do
    res = s
    return
  end function pad4
  recursive integer function main() result(res)
    max = 120
    write(s1,'(G0)') max
    print *, trim('The attractive numbers up to and including ' // s1) // ' are:'
    count = 0
    line = ''
    lineCount = 0
    i = 1
    do while ((i <= max))
      c = countPrimeFactors(i)
      if (isPrime(c)) then
        line = (line + pad4(i))
        count = (count + 1)
        lineCount = (lineCount + 1)
        if ((lineCount == 20)) then
          print *, line
          line = ''
          lineCount = 0
        end if
      end if
      i = (i + 1)
    end do
    if ((lineCount > 0)) then
      print *, line
    end if
  end function main
end program attractive_numbers
